# dow25-sharpe-montecarlo

./: README.md  dow25-sharpe-montecarlo.cabal  run_experiment.sh
.devcontainer/: Dockerfile  devcontainer.json
app/: DataLoader.hs  Main.hs  Simulator.hs
becnhmark/: main.py
data/: dow_jones_close_prices_aug_dec_2024.csv  dow_jones_close_prices_jan_mar_2025.csv  download_data.py
execution-data/: experimentN10.txt  experimentN1_1.txt  experimentN1_2.txt  experimentN1_3.txt  experimentN1_4.txt  experimentN1_5.txt  experimentN5.txt  experimentN5_2025.txt
